--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ combustion_test.sqlite
 *combustion_test.sqlite*
 /spec/internal/tmp/cache/
 spec/internal/db/combustion_test.sqlite
+spec/internal/tmp/capybara/
