Set up NPM package publishing with @rocket-sensei/activeadmin_trumbowyg
- Updated GitHub Actions workflow to match searchable_select pattern
- Configured package.json with proper exports and metadata
- Added src/index.js as the main ESM entry point
- Removed old app/assets/javascripts files (moved to src)
- Updated for ActiveAdmin 4+ and modern build systems only

--- a/.npmignore
+++ b/.npmignore
@@ -1,49 +1,11 @@
-# Development files
+# Ignore everything except src/
+/*
+!/src/
+
+# But still ignore these everywhere
 *.gem
-*.rbc
-.bundle
-.config
-.yardoc
-Gemfile
-Gemfile.lock
-InstalledFiles
-_yardoc
-coverage
-doc/
-lib/bundler/man
-pkg
-rdoc
-spec
-tmp
-.rspec
-.rubocop.yml
+*.log
+.DS_Store
 .ruby-version
 .ruby-gemset
 .rvmrc
-
-# Git files
-.git
-.gitignore
-
-# Documentation
-*.md
-LICENSE.txt
-extra/
-docs/
-examples/
-
-# CI/CD
-.github/
-.travis.yml
-
-# Ruby/Rails specific
-Rakefile
-*.gemspec
-app/
-config/
-lib/
-vendor/assets/fonts/
-vendor/assets/images/
-
-# Keep only the prepared src folder for NPM
-!src/
